--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,11 @@ android {
      implementation 'androidx.activity:activity-compose:1.8.0'
      implementation "androidx.compose.ui:ui:$compose_version"
      implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-     implementation 'androidx.compose.material3:material3:1.2.0-alpha09'
      implementation 'com.google.accompanist:accompanist-systemuicontroller:0.27.0'
      implementation "androidx.navigation:navigation-compose:2.7.4"
      implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+     implementation 'androidx.compose.material3:material3:1.2.0-alpha10'
+     implementation 'androidx.compose.material3:material3-window-size-class:1.1.2'
      implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
      implementation "com.google.dagger:hilt-android:$hilt_version"
      kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
