Clean up manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TrainingApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.TrainingApp">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.TrainingApp">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
