--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ gradle = "8.2.2"
 kotlin = "1.9.22"
 ksp = "1.9.22-1.0.17"
 compose-destination = "1.9.60"
+ktlint = "10.1.0"
 
 [libraries]
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemuicontroller" }
@@ -50,4 +51,5 @@ android-library = {id = "com.android.library", version.ref = "gradle"}
 kotlin-android = {id = "org.jetbrains.kotlin.android", version.ref = "kotlin"}
 hilt = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
+ktlint = {id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint"}
 
