--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ kotlin = "1.9.22"
 ksp = "1.9.22-1.0.17"
 compose-destination = "1.9.60"
 ktlint = "10.1.0"
+compose-material = "1.3.0"
 
 [libraries]
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemuicontroller" }
@@ -44,6 +45,7 @@ ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = 
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "compose-destination" }
 compose-destinations = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "compose-destination" }
+androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "compose-material" }
 
 [plugins]
 android-application = {id = "com.android.application", version.ref = "gradle"}
