--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,28 @@
 [versions]
 accompanist-systemuicontroller = "0.27.0"
-activity-compose = "1.8.2"
+activity-compose = "1.9.0"
 androidx-junit = "1.1.5"
-androidx-material3 = "1.2.0"
+androidx-material3 = "1.2.1"
 animations-core = "1.9.60"
-core-ktx = "1.12.0"
+core-ktx = "1.13.1"
 espresso-core = "3.5.1"
-hilt = "2.48"
-hilt-navigation-compose = "1.1.0"
-hilt-navigation-fragment = "1.1.0"
+hilt = "2.49"
+hilt-navigation-compose = "1.2.0"
 junit = "4.13.2"
-lifecycle-runtime-ktx = "2.7.0"
-material3 = "1.2.0"
+lifecycle-runtime-ktx = "2.8.2"
+material3 = "1.2.1"
 navigation-compose = "2.7.7"
-compose = "1.6.1"
-gradle = "8.2.2"
-kotlin = "1.9.22"
-ksp = "1.9.22-1.0.17"
+compose = "1.7.0-beta03"
+gradle = "8.5.0"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.21"
 compose-destination = "1.9.60"
 ktlint = "10.1.0"
-compose-material = "1.3.0"
 
 [libraries]
 accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemuicontroller" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "androidx-material3" }
-androidx-hilt-navigation-fragment = { module = "androidx.hilt:hilt-navigation-fragment", version.ref = "hilt-navigation-fragment" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle-runtime-ktx" }
 androidx-material3 = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
@@ -44,13 +41,12 @@ ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "compose-destination" }
-compose-destinations = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "compose-destination" }
-androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "compose-material" }
 
 [plugins]
 android-application = {id = "com.android.application", version.ref = "gradle"}
 android-library = {id = "com.android.library", version.ref = "gradle"}
 kotlin-android = {id = "org.jetbrains.kotlin.android", version.ref = "kotlin"}
+kotlin-compose-compiler = {id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin"}
 hilt = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
 ktlint = {id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint"}
